fix main nav item too close bug
- tweak the css for the navigation

--- a/app/assets/stylesheets/custom/_nav.scss
+++ b/app/assets/stylesheets/custom/_nav.scss
@@ -56,7 +56,7 @@ nav.navbar {
         border-color: $salmon-pink;
       }
       &:first-of-type {
-        padding-left: 0;
+        margin-left: 20px;
       }
     }
     &.active a {
